--- a/package.json
+++ b/package.json
@@ -1,28 +1,38 @@
 {
   "name": "web-guided-project-react-router-solution",
-  "version": "0.0.1",
-  "scripts": {
-    "start": "parcel src/index.html"
-  },
-  "license": "ISC",
-  "devDependencies": {
-    "eslint": "^8.10.0",
-    "eslint-plugin-react": "^7.29.2",
-    "less": "^4.1.2",
-    "parcel-bundler": "^1.12.4"
-  },
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BloomInstituteOfTechnology/web-guided-project-react-router-solution.git"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "bugs": {
-    "url": "https://github.com/BloomInstituteOfTechnology/web-guided-project-react-router-solution/issues"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "homepage": "https://github.com/BloomInstituteOfTechnology/web-guided-project-react-router-solution#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
